--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -46,6 +46,9 @@ p
   :margin 0px auto
   :padding 0px
 
+.hide_me
+  :display none
+
 span.unread_comment_count
   :font-weight bold
   :font-size 10px
