--- a/app/views/comments/_edit.haml
+++ b/app/views/comments/_edit.haml
@@ -2,6 +2,6 @@
   = comment_fields(f,comment,true)
   .submit
     = f.submit t('.submit')
-    or
+    = t 'common.or'
     = cancel_edit_comment_link(comment)
   .clear
