--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -3,8 +3,7 @@
     .pending_projects
       = list_pending_projects(@pending_projects)
 
-  %h2
-    News feed for all your projects
+  %h2= t '.title'
     
   #activities
     = list_activities(@activities)
