--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -1,8 +1,8 @@
-- if not @pending_projects.empty? or not @activities.empty?
-  - if @pending_projects
-    .pending_projects
-      = list_pending_projects(@pending_projects)
+- if @pending_projects
+  .pending_projects
+    = list_pending_projects(@pending_projects)
 
+- if not @activities.empty?
   %h2= t '.title'
     
   #activities
