Refactored before_filter so that :load_project is used for Project and other controllers. Added the before_filter :belongs_to_project? to ensure the user can only view his projects.

--- a/app/views/projects/edit.haml
+++ b/app/views/projects/edit.haml
@@ -2,6 +2,6 @@
   oh, yeah, baby
 
 
-- form_for @project do |f|
-  = project_fields(f,@project)
+- form_for @current_project do |f|
+  = project_fields(f,@current_project)
   = f.submit t('.submit')
