--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -1,46 +1,35 @@
-.upload_wrap
-  :clear both
-  p.actions
-    :position relative
-    :margin 0px
-    span
-      :padding 6px 0px
-      :overflow auto
-      :position absolute
-      :display block
-      :width 16px
-      :height 40px
-  .upload
-    :width 600px
-    :margin-left 16px
+.upload
+  :margin 0px
+    :top 15px
+    :left 16px
+    :bottom 15px
+  .info
+    :width 60px
     :float left
-    .file_icon
-      :float left
-      :padding-bottom 5px
-    .thumbnail
-      :float left
-      :margin-right 5px
-    .show_details
-      :float left
+    img
+      :margin-left 6px
+  .block
+    :width 530px
+    :float right
     .name
       :font-size 12px
-      :margin-bottom 3px
-    .uploader
-      :font-size 12px
-      :border-bottom solid 1px rgb(235,235,235)
       :margin-bottom 5px
-      :color rgb(180,180,180)
+      :border-bottomss solid 1px rgb(235,235,235)      
       a
-        :color rgb(180,180,180)
-      a:hover
-        :color rgb(80,80,80)
+        :font-size 12px
+        :font-weight bold
     .date
       :float right
       :font-size 10px
       :color rgb(180,180,180)
-    .description
+    .body
       :font-size 12px
-      :margin-bottom 10px
+      :color rgb(60,60,60)
+      p
+        :font-family "Lucida Grande",Verdana,Arial,Helvetica,sans-serif
+        :line-height 1.3em
+        :margin 0
+    
 .iframe_container
   :height 30px
   :overflow none
