MIGRATE NEEDED. Now users need to confirm their account by following a link sent by email. Unconfirmed email screen, with option to re-send email. Redirect from signup if logged_in

--- a/public/stylesheets/sass/users.sass
+++ b/public/stylesheets/sass/users.sass
@@ -131,3 +131,22 @@ div.upload_avatar
       :-moz-border-radius 16px
       :-webkit-border-radius 16px
       :font-size 12px
+      
+.unconfirmed_email_users
+  .content
+    :padding
+      :top 10px
+      :left 20px
+      :bottom 10px
+    :border-top solid 1px rgb(230,230,230)
+    h2
+      :font-family Helvetica
+      :font-size 24px
+      :margin 0px
+        :top 10px
+        :bottom 15px
+    h3
+      :font-size 16px
+    p, li
+      :font-size 13px
+      :margin-bottom 5px
