added specs, fixed tasks ajax, styled login page, and amoung other things

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,7 +14,8 @@
       = hot_flashes(flash)
       = navigation(@current_project,@recent_projects)
       .wrapper
-        = project_navigation(@current_project)
+        -unless location_name?('welcome_users')
+          = project_navigation(@current_project)
         -unless @content_for_banner.nil?
           .banner
             = yield :banner
