--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -27,6 +27,8 @@ div.global_navigation
         :margin 0px 7px
       a:hover,a.active
         :color rgb(255,255,0)
+    li.right_side
+      :float right
 div.navigation
   :clear both
   :width 960px
@@ -54,6 +56,9 @@ div.navigation
       :color rgb(48,48,48)
       :background rgb(160,228,237)
       +round_corners
+  li.welcome
+    a.active
+      :background rgb(255,255,255)
   li.button
     a
       :font-size 14px
