--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -48,7 +48,9 @@ form.task_form_wrap
   div.task_form
     :padding 10px
     .text_field
+      :padding-right 10px
       input
+        :width 100%
         :border
           :top solid 1px rgb(90,90,90)
           :left solid 1px rgb(150,150,150)
