--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -1,6 +1,9 @@
 .comment{:id => "comment_#{comment.id}" }
   .info
     = activity_comment_icon(comment)
+    - if true #CommentRead.user(current_user).unread?(comment)
+      .unread
+        •    
     = #comment_actions_link(comment)
     = thumb_avatar(comment.user)
     - if false ##unless comment.hours.nil?
@@ -10,9 +13,6 @@
           = comment.hours
           hr
   .block
-    - if CommentRead.user(current_user).unread?(comment)
-      .unread
-        •
     .date
       = posted_date comment.created_at
     .name
