--- a/app/views/shared/_global_navigation.erb
+++ b/app/views/shared/_global_navigation.erb
@@ -36,17 +36,32 @@ render_tabnav :global do
     end
   else
     add_tab do |t|
-      t.named t('.product_site')
+      t.named t('.home')
       t.links_to 'http://www.teambox.com/'
     end
     add_tab do |t|
-      t.named t('.help')
-      t.links_to 'http://help.teambox.com/'
+      t.named t('.tour')
+      t.links_to 'http://www.teambox.com/tour/'
     end
     add_tab do |t|
       t.named t('.blog')
       t.links_to 'http://www.teambox.com/blog/'
     end
+
+    add_tab do |t|
+      t.named t('.signup')
+      t.links_to signup_path
+      t.li_class = 'right_side'
+    end
+
+    add_tab do |t|
+      t.named t('.login')
+      t.links_to login_path
+      t.highlights_on :controller => :sessions, :action => :new
+      t.highlights_on :controller => :sessions, :action => :create
+      t.li_class = 'right_side'
+    end
+        
   end
   
 end
