--- a/app/views/pages/_page.haml
+++ b/app/views/pages/_page.haml
@@ -1,3 +1,3 @@
 .page{ :class => "#{ 'active_page' if current_target == page }" }
   .title
-    = page_link(@current_project,page)
+    = page_link(page)
