--- a/app/views/shared/_project_navigation.erb
+++ b/app/views/shared/_project_navigation.erb
@@ -11,6 +11,24 @@ render_tabnav :project do
         t.links_to projects_path
         t.highlights_on :controller => :projects, :action => :index
       end
+      
+      add_tab do |t|
+        t.named t('.all_conversations')
+        t.links_to conversations_path
+        t.highlights_on :controller => :conversations, :action => :index
+      end
+
+      add_tab do |t|
+        t.named t('.all_task_lists')
+        t.links_to task_lists_path
+        t.highlights_on :controller => :task_lists, :action => :index
+      end
+      
+      add_tab do |t|
+        t.named t('.all_pages')
+        t.links_to pages_path
+        t.highlights_on :controller => :pages, :action => :index
+      end
 
   #    add_tab do |t|
   #      t.named t('.all_conversations')
