--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -1,6 +1,7 @@
 - content_for :column do
-  = new_task_list_link
-  = new_task_list_form(project,TaskList.new)
+  - unless project.nil?
+    = new_task_list_link
+    = new_task_list_form(project,TaskList.new)
   #task_lists
     = list_task_lists(project,task_lists,current_target)
   =# sortable_element :task_lists, :tag => 'div', :url => { :action => 'reorder' }, :complete => "alert(request.responseText)"
