--- a/app/views/task_lists/_task_list.haml
+++ b/app/views/task_lists/_task_list.haml
@@ -1,9 +1,9 @@
 .task_list_wrap{ :id => "task_list_#{task_list.id}" }
   .task_list{ :class => "#{ 'active_task_list' if current_target == task_list }" }
-    =task_list_action_links(project,task_list)
+    =task_list_action_links(task_list.project,task_list)
     =show_comments_count(task_list)
     = task_list_link(task_list)
-  .tasks{ :id => "project_#{project.id}_task_list_#{task_list.id}" }
-    = list_tasks(project,task_list,task_list.tasks,current_target)
-  = new_task_link(project,task_list)
-  = new_task_form(project,task_list,Task.new)
+  .tasks{ :id => "project_#{task_list.project.id}_task_list_#{task_list.id}" }
+    = list_tasks(task_list.project,task_list,task_list.tasks,current_target)
+  = new_task_link(task_list.project,task_list)
+  = new_task_form(task_list.project,task_list,Task.new)
