--- a/public/stylesheets/sass/invitations.sass
+++ b/public/stylesheets/sass/invitations.sass
@@ -9,3 +9,6 @@
       :margin-bottom 15px
     form.accept_project, form.decline_project, span
       :display inline
+
+.invitation_resent
+  :padding 10px
