--- a/app/views/task_lists/show.haml
+++ b/app/views/task_lists/show.haml
@@ -7,7 +7,7 @@
 =link_to trash_image, project_task_list_path(@current_project,@task_list), :confirm => 'Are you sure you want to delete this task list?', :method => :delete 
 =link_to_function pencil_image, show_edit_task_list(@current_project,@task_list)
     
-= new_comment_form(@current_project,@task_list)
+= new_comment_form(@current_project,:target => @task_list)
 
 #comments
   = list_comments(@comments,@task_list)
