fixed unread icon styling

--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -3,7 +3,7 @@
     = activity_comment_icon(comment)
     - if true #CommentRead.user(current_user).unread?(comment)
       .unread
-        •    
+        =image_tag('unread.jpg')
     = #comment_actions_link(comment)
     = thumb_avatar(comment.user)
     - if false ##unless comment.hours.nil?
