--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -75,7 +75,10 @@ form.edit_comment
         :position absolute
         :display block      
     .unread
+      :float left
       :position relative
+      :margin-top 20px
+      :width 16px
     .hours
       :padding-left 1px
       :padding-right 10px
