--- a/public/stylesheets/sass/activities.sass
+++ b/public/stylesheets/sass/activities.sass
@@ -1,8 +1,6 @@
 .activity
   :padding 0px
-  :margin 0px
-    :top 15px
-    :bottom 15px
+  :margin 10px 0px
   :font-size 12px
   .date
     :float right
@@ -30,4 +28,35 @@
   .date
     :color rgb(0,0,0)
   .clear
-    :border-bottom solid 1px rgb(200,200,200)    
+    :border-bottom solid 1px rgb(200,200,200)
+
+.activity_icon
+  :float left
+  :width 16px
+  :height 16px
+  :margin-right 5px
+  :background rgb(0,0,0)
+.activity_task
+  :background url(../images/activity_task.jpg) no-repeat 
+.activity_task_unread
+  :background url(../images/activity_task.jpg) -16px 0px no-repeat
+.activity_task_list
+  :background url(../images/activity_tasklist.jpg) no-repeat 
+.activity_task_list_unread
+  :background url(../images/activity_tasklist.jpg) -16px 0px no-repeat
+.activity_person  
+  :background url(../images/activity_person.jpg) no-repeat
+.activity_person_unread
+  :background url(../images/activity_person.jpg) -16px 0px no-repeat
+.activity_page
+  :background url(../images/activity_page.jpg) no-repeat
+.activity_page_unread
+  :background url(../images/activity_page.jpg) -16px 0px no-repeat  
+.activity_conversation
+  :background url(../images/activity_conversation.jpg) no-repeat 
+.activity_conversation_unread
+  :background url(../images/activity_conversation.jpg) -16px 0px no-repeat
+.activity_project
+  :background url(../images/activity_project.jpg) no-repeat 
+.activity_project_unread
+  :background url(../images/activity_project.jpg) -16px 0px no-repeat  
