--- a/app/views/activities/_activity_line.haml
+++ b/app/views/activities/_activity_line.haml
@@ -1,5 +1,5 @@
 .activity{ :class => "#{activity.action_type}" }
-  = image_tag("activity_#{activity.downcase_type}.jpg")
+  .activity_icon{ :class => "activity_#{activity.target_type.to_s.underscore}" }
   %span.name
     = link_to activity.user.name, user_path(activity.user)
   %span
