--- a/app/views/users/_profile_completeness.haml
+++ b/app/views/users/_profile_completeness.haml
@@ -7,7 +7,8 @@
   .progress_container
     .bar{ :style => "width: #{current_user.profile_percent.to_i}%"}
       ="#{current_user.profile_percent.to_i}% complete"
-  .next_check
-    =link_to current_user.next_failed_check[:title], ''
-    to get to
-    ="#{current_user.next_percent_complete.to_i}%"
+  - if current_user.next_failed_check
+    .next_check
+      = link_to current_user.next_failed_check[:title], ''
+      to get to
+      = "#{current_user.next_percent_complete.to_i}%"
