--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -60,7 +60,13 @@ form.task_form_wrap
 #task_lists
   :clear both
   
-.task_title  
+.task_header
+  :display block
+  :margin-bottom 20px
+  h2
+    :font-size 16px
+    :margin-left 20px
+ 
   p.actions
     :position relative
     :margin 0px
@@ -77,3 +83,8 @@ form.task_form_wrap
       :height 40px
       :left -24px
       :top 2px
+  .watching
+    :font-size 12px
+    :margin-left 20px
+    :color rgb(180,180,180)
+    
