--- a/public/stylesheets/sass/pages.sass
+++ b/public/stylesheets/sass/pages.sass
@@ -15,15 +15,27 @@ div.active_page
     :padding-bottom 20px
 
 .show_pages
-  h2
-    :font-size 25px
-    :margin 0px
-      :bottom 5px
+  .page_header
+    :display block
+    :margin-bottom 20px
+    h2
+      :font-size 16px
+      :margin-left 20px
+    .text_actions
+      :float right
+      :font-size 12px
+      :color rgb(200,200,200)
+      a
+        :text-decoration underline
+    .watching
+      :font-size 12px
+      :margin-left 20px
+      :color rgb(180,180,180)
   h3
     :font-size 18px
     :margin 0px
   p
-    :font-size 15px
+    :font-size 12px
     :line-height 1.4em
   .buttons
     :background rgb(230,230,230)
