--- a/app/views/task_lists/_actions.haml
+++ b/app/views/task_lists/_actions.haml
@@ -1,3 +1,4 @@
-%p.actions{ :id => "list_actions_#{task_list.id}", :style => 'display: none'}
-  %span.drag
-    =drag_image
+.text_actions
+  = link_to t('common.delete'), project_task_list_path(@current_project,@task_list), :confirm => t('confirm.delete_task_list'), :method => :delete
+  = t('common.or')
+  = link_to_function t('common.edit'), show_edit_task_list(@current_project,@task_list)
