--- a/app/views/task_lists/show.haml
+++ b/app/views/task_lists/show.haml
@@ -1,13 +1,11 @@
-=task_list_column(@current_project,@task_lists,@task_list)
-  
-%h2.title
-  Comment on
-  =@task_list.name
+= task_list_column(@current_project,@task_lists,@task_list)
 
-= link_to trash_image, project_task_list_path(@current_project,@task_list), :confirm => 'Are you sure you want to delete this task list?', :method => :delete 
-= link_to_function pencil_image, show_edit_task_list(@current_project,@task_list)
-    
-= new_comment_form(@current_project,:target => @task_list)
+.task_list_header
+  = task_list_action_links(@current_project, @task_list)
+  %h2= t('.title', :name => @task_list.name)
+  = people_watching @task_list
+
+= new_comment_form(@current_project, :target => @task_list)
 
 #comments
-  = list_comments(@comments,@task_list)
+  = list_comments(@comments, @task_list)
