--- a/app/views/pages/show.haml
+++ b/app/views/pages/show.haml
@@ -3,7 +3,7 @@
 .page_header
   = page_action_links(@current_project, @task_list)
   %h2= @page.name
-  = people_watching @page
+  .description= @page.description
 
 .buttons#buttons
   = new_page_note_link(@current_project, @page)
