--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -39,19 +39,10 @@
 
 form#new_project, form.edit_project
   :border 1px solid rgb(220,220,220)
-  :padding 10px
+  :padding 5px
+    :left 15px
+    :bottom 28px
   :background rgb(240,240,240)
-  .text_field
-    :margin-bottom 10px
-    .label
-      :display block
-      :margin-bottom 5px
-      label
-        :display inline
-      .description
-        :display inline
-        :font-size 10px
-        :font-style italic
   #project_name
     :width 272px
   #project_permalink
