--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -65,7 +65,9 @@ form.task_form_wrap
   :margin-bottom 20px
   h2
     :font-size 16px
-    :margin-left 20px
+    :margin
+      :left 20px
+      :bottom 3px
   .text_actions
     :float right
     :font-size 12px
