--- a/public/stylesheets/sass/users.sass
+++ b/public/stylesheets/sass/users.sass
@@ -22,6 +22,11 @@
     
 
 .edit_users, .update_users
+  h2
+    :margin
+      :top 5px
+      :left 20px
+      :bottom 15px
   label
     :float left
     :width 120px
@@ -32,13 +37,11 @@
     :padding 5px 0px
     textarea
       :height 4em
-  #change_password_link a
-    :margin-left 130px
-    :font-size 12px
-  .submit
+  #change_password_link
     :margin
-      :top 10px
+      :bottom 5px
       :left 130px
+    :font-size 12px
 
 div.upload_avatar
   .avatar
