--- a/app/views/pages/_fields.haml
+++ b/app/views/pages/_fields.haml
@@ -1,3 +1,11 @@
 .name.text_field
-  = f.label :name, t('.name')
+  .label
+    = f.label :name, t('.name')
+    .description= t('.name_description')
   = f.text_field :name
+
+.description.text_area
+  .label
+    = f.label :description, t('.description')
+    .description= t('.description_description')
+  = f.text_area :description
