--- a/app/views/projects/_fields.haml
+++ b/app/views/projects/_fields.haml
@@ -1,11 +1,12 @@
 .name.text_field
   .label
     = f.label :name, t('.name')
-    .description= "Choose a brief and descriptive title. For example: Taggart Transcontinental"
+    .description= t('.name_description')
   = f.text_field :name
+
 .permalink.text_field
   .label
     = f.label :permalink, t('.permalink')
-    .description= "This will be the web address for your project. Keep it as short as possible. No spaces allowed."
+    .description= t('.permalink_description')
   = t('.permalink_prefix')
   = f.text_field :permalink
