--- a/app/views/task_lists/index.haml
+++ b/app/views/task_lists/index.haml
@@ -1,6 +1,6 @@
 =task_list_column(@current_project,@task_lists,@task_list)
 
-- unless @activities.empty?
+- unless @task_lists.empty?
   #activities
     = list_activities(@activities)
 
