--- a/app/views/users/edit.haml
+++ b/app/views/users/edit.haml
@@ -1,7 +1,9 @@
 - content_for :column do
   - form_for @current_user do |f|
     = edit_avatar(f,@current_user)
-    
+
+%h2= t('.title')
+
 - form_for @current_user, :html => { :id => 'edit_user' } do |f|
   = f.error_messages
   = user_fields(f,@current_user)
