--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -3,8 +3,8 @@
   :font-size 12px
   :padding-bottom 5px
 
-.text_field
-  :padding-bottom 5px
+.text_field, .text_area
+  :margin-bottom 10px
   label
     +label_styles
   input
@@ -15,15 +15,20 @@
       :top solid 1px rgb(196,196,196)
       :left solid 1px rgb(233,233,233)
       :bottom solid 1px rgb(233,233,233)
-      :right solid 1px rgb(196,196,196)
-.select
-  label
-    +label_styles
-    :float left
-    :padding-right 10px
-.text_area
-  label
-    +label_styles
+      :right solid 1px rgb(196,196,196)      
+  .label
+    :display block
+    :margin
+      :top 10px
+      :bottom 5px
+    label
+      :display inline
+      :font-weight bold
+    .description
+      :display inline
+      :margin-left 5px
+      :font-size 10px
+      :color rgb(150,150,150)      
   textarea
     :font-size 16px
     :padding 5px
@@ -33,8 +38,18 @@
       :left solid 1px rgb(233,233,233)
       :bottom solid 1px rgb(233,233,233)
       :right solid 1px rgb(196,196,196)
+
+.select
+  label
+    +label_styles
+    :float left
+    :padding-right 10px
+
 .submit
+  :width 590px
   :font-size 12px
+  input
+    :float right
   
 .errorExplanation
   :display block
