--- a/app/views/pages/new.haml
+++ b/app/views/pages/new.haml
@@ -7,4 +7,12 @@
     = f.submit t('.submit')
   
 - content_for :column do
-  bhehe
+  %p= t '.define1'
+  %p= t '.define2'
+  %ul
+    %li= t '.feature1'
+    %li= t '.feature2'
+    %li= t '.feature3'
+    %li= t '.feature4'
+  %p= t '.footer1'
+  %p= t '.footer2'
