--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -7,7 +7,7 @@
     = stylesheet_link_tag 'application'
     = sprockets_include_tag
 
-  %body{ :class => "#{location_name} #{I18n.locale}"}
+  %body{ :class => "#{location_name} #{I18n.locale} #{ENV['RAILS_ENV']}"}
     .container
       = header
       = global_navigation
