--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -55,3 +55,6 @@ div.fieldWithErrors
 span.unread_comment_count
   :font-weight bold
   :font-size 10px
+  
+.development
+  :background url(../images/lobster_dev.jpg) top left no-repeat rgb(49,48,48)
