--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -33,3 +33,13 @@
           :font
             :weight bold
             :size 12px
+
+.watching
+  :background rgb(250,250,250)
+  :border solid 1px rgb(230,230,230)
+  :padding 10px
+  :color rgb(160,160,160)
+  :-moz-border-radius 4px
+  :-webkit-border-radius 4px
+  :font-size 12px
+  :margin-bottom 10px
