--- a/app/views/invitations/_invitation.haml
+++ b/app/views/invitations/_invitation.haml
@@ -5,7 +5,7 @@
   - else
     = t('.invited_email', :email => invitation.email, :inviter => invitation.user.login)
   .status
-    Pending
+    = t('.pending')
     = t('.time_ago', :time_ago_in_words => time_ago_in_words(invitation.updated_at))
   .resend
     = resend_invitation_link(invitation)
