--- a/public/stylesheets/sass/invitations.sass
+++ b/public/stylesheets/sass/invitations.sass
@@ -1,10 +1,11 @@
-.pending_projects
+.invitations
   :font-size 12px
   .project
     :background-color rgb(255,255,200)
     :margin 10px
     :padding 10px
     :border 1px rgb(220,220,150) solid
+    :width 580px
     .text
       :margin-bottom 15px
     form.accept_project, form.decline_project, span
