--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -33,6 +33,9 @@
           :font
             :weight bold
             :size 12px
+    .invitation
+      .resent
+        :color rgb(0,120,0)
 
 .watching
   :background rgb(250,250,250)
