--- a/public/stylesheets/sass/users.sass
+++ b/public/stylesheets/sass/users.sass
@@ -7,6 +7,16 @@
     :display block
     :margin
       :left 30px
+  .submit
+    :display block
+    input
+      :float none
+  .use_this_email
+    :margin 10px
+    :padding 10px
+    :border 1px rgb(220,220,150) solid
+    :background-color rgb(255,255,200)
+    :font-size 12px
 
 .show_users
   .content
