--- a/app/views/invitations/_invitation.haml
+++ b/app/views/invitations/_invitation.haml
@@ -1,7 +1,7 @@
 .person.invitation{:id => "invitation_#{invitation.id}"}
   - unless invitation.invited_user.nil?
     = thumb_avatar(invitation.invited_user)
-    = t('.invited_user', :inviter => invitation.user.login, :invitee => invitation.invited_user.login)
+    = t('.invited_user', :invitee => invitation.invited_user.login, :inviter => invitation.user.login)
   - else
     = t('.invited_email', :email => invitation.email, :inviter => invitation.user.login)
   .status
@@ -9,5 +9,6 @@
     = t('.time_ago', :time_ago_in_words => time_ago_in_words(invitation.updated_at))
   .resend
     = resend_invitation_link(invitation)
+    = loading('resend_invitation', invitation.id)
   .actions
     = delete_invitation_link(invitation)
