--- a/app/views/users/_fields.haml
+++ b/app/views/users/_fields.haml
@@ -1,36 +1,49 @@
-- unless @invitation_token.nil?
+- if @invitation_token
   = hidden_field_tag 'invitation', @invitation_token
+
 .login.text_field
   = f.label :login, t('.login')
   = f.text_field :login
-  = tooltip 'user_login', "You need a username to login. People will be able to find you by username. Must be all lowercase, no spaces. You can use undescores."
+  = tooltip 'user_login', t('.tooltips.login')
+
 .name.text_field
   = f.label :name, t('.name')
   = f.text_field :name
+
 .email.text_field
   = f.label :email, t('.email')
   = f.text_field :email
+
+- if @invitation
+  .use_this_email= t('.use_this_email')
+
 - unless user.new_record?
   #change_password_link
     = link_to_function t('.change_password'), show_user_password_fields
+
 #password_fields{:style => (user.new_record? ? "" : "display: none;")}
   .password.text_field
     = f.label :password
     = f.password_field :password
     = password_strength :password_strength, 'user_password'
+
   .password.text_field
     = f.label :password_confirmation, 'Confirm Password'
     = f.password_field :password_confirmation
+
 - unless user.new_record?
   .description.text_area
     = f.label :biography
     = f.text_area :biography
+
   .time_zone.text_field
     = f.label :time_zone, t('.time_zone')
     = f.time_zone_select :time_zone, ActiveSupport::TimeZone.us_zones, :default => "Eastern Time (US & Canada)"
+
   .language.select
     = f.label :language, t('.language')
     = f.select :language, [['English', 'en']]
+
   .first_day_of_week.select
     = f.label :first_day_of_week, t('.first_day_of_week')
     = f.select :first_day_of_week, [[t('.sunday'), 'sunday'],[t('.monday'), 'monday']]
