--- a/app/views/emailer/project_invitation.haml
+++ b/app/views/emailer/project_invitation.haml
@@ -1,27 +1,23 @@
-.email{ :style => 'font-size: 14px; color: rgb(50,50,50); font-family: Helvetica, Arial' }
-  %p{ :style => 'font-size: 10px; color: rgb(100,100,100)' }
-    = t('common.do_not_answer')
+.email{ :style => email_global }
+  %p{ :style => email_text(:small) }
+    = t('emailer.common.do_not_answer')
 
-  .box{ :style => 'background-color: rgb(255,255,200); margin: 10px; padding: 10px; border: 1px rgb(220,220,150) solid' }
-    %p= t('.collaborate_with', :referral => @referral.name)
-    %p{ :style => 'font-size: 18px; color: rgb(0,0,0)' }
-      = "You have been invited to the project <b>#{@project.name}</b>"
-    %h2{ :style => 'font-size: 18px; color: rgb(0,0,0)' }
-      = link_to "Accept the invitation to start collaborating", new_user_url(:invitation => @invitation.token)
+  .box{ :style => email_box }
+    %p= t('emailer.invitation.collaborate_with', :name => @referral.name)
+    %p{ :style => email_text(:big) }
+      = t('emailer.invitation.you_have_been_invited_to', :project => @project.name)
+    %h2{ :style => email_text(:big) }
+      = link_to t('emailer.invitation.accept_the_invitation'), new_user_url(:invitation => @invitation.token)
     %p
       %strong
-        = "Current users in this project:"
+        = t('emailer.invitation.current_users')
       = @project.people.collect { |p| p.name }.join(", ")
 
-  %p{ :style => 'font-size: 10px; color: rgb(100,100,100)' }
-    = "If the above link doesn't work, copy and paste the following code into your browser bar: "
+  %p{ :style => email_text(:small) }
+    = t('emailer.invitation.plaintext_link')
     %br
     = link_to new_user_url(:invitation => @invitation.token), new_user_url(:invitation => @invitation.token)
-  %p
-    Teambox is a project management platform made for real-world collaboration.
-  %p
-    Plan, share and keep track of what's been done. Simple as it should be.
 
-  .footer{ :style => 'font-size: 10px; color: rgb(100,100,100)' }
+  .footer{ :style => email_text(:small) }
     %p
-      = "This email was sent to you by your contact's request. Please report any abuse to abuse@teambox.com."
+      = t('emailer.invitation.report_abuse')
