Don't send confirmation emails to users signing up from an invitation email.

--- a/app/views/users/welcome.haml
+++ b/app/views/users/welcome.haml
@@ -17,7 +17,7 @@
 
   - if @pending_projects
     .pending_projects
-      = list_pending_projects(@pending_projects)
+      = list_pending_invites(@pending_projects)
 
 .section.hide_me
   %h2 Agendas
