--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -2,7 +2,8 @@
   - unless project.nil?
     = new_task_list_link
     = new_task_list_form(project,TaskList.new)
-  #task_lists
+  = my_tasks_link
+  #task_lists  
     = list_task_lists(project,task_lists,current_target)
   =# sortable_element :task_lists, :tag => 'div', :url => { :action => 'reorder' }, :complete => "alert(request.responseText)"
   =# comments_settings
