--- a/app/views/task_lists/index.haml
+++ b/app/views/task_lists/index.haml
@@ -2,18 +2,6 @@
 
 - unless @task_lists.empty?
   #activities
-    = list_activities(@activities)
-
+    = list_main_task_list(@task_lists)
 - else
-  #primer
-    %p= t('.primer.empty')
-    .box
-      %h2= link_to t('.primer.create_first'), new_project_task_list_path(@current_project)
-      %p= t '.primer.define'
-      %ul
-        %li= t '.primer.item1'
-        %li= t '.primer.item2'
-        %li= t '.primer.item3'
-        %li= t '.primer.item4'
-      %p= t '.primer.footer1' 
-      %p= t '.primer.footer2'
+  =task_list_primer(@current_project)
