--- a/app/views/tasks/_actions.haml
+++ b/app/views/tasks/_actions.haml
@@ -1,4 +1,4 @@
 .text_actions
-  = edit_task_link(project, task_list, task)
+  = edit_task_link(project, task_list)
   = t('common.or')
   = delete_task_link(project, task_list, task)
