--- a/app/views/tasks/_edit.haml
+++ b/app/views/tasks/_edit.haml
@@ -1,7 +1,12 @@
-- remote_form_for [project,task_list,task], :html => { :id => "project_#{project.id}_task_list_#{task_list.id}_edit_task_#{task.id}", :class => 'task_form_wrap', :style => 'display: none' } do |f|
+- remote_form_for [project,task_list,task], :html => { :id => task_id(:form,:edit,project,task_list), :class => 'task_form_wrap', :style => 'display: none' } do |f|
   .task_form
-    = task_fields(f)
+    .body.text_field
+      = f.text_field :name, :class => 'focus'
+    - unless task.new_record?
+      .assigned.select
+        =f.label :assigned_id, "Assigned to:"
+        = f.select :assigned_id, project.people.map {|p| [ p.name, p.id ]}, { :include_blank => true }
     .submit
       = f.submit t('.submit')
       or
-      = link_to_function t('.cancel'), hide_edit_task(project,task_list,task)
+      = link_to_function t('.cancel'), hide_edit_task(project,task_list)
