--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -1,6 +1,6 @@
-.task{ :id => "project_#{project.id}_task_list_#{task_list.id}_task_#{task.id}", :class => "#{ 'active_task' if current_target == task }" }
+.task{ :id => "#{task_id(:single,:item,project,task_list,task)}", :class => "#{ 'active_task' if current_target == task }" }
   =task_drag_link(project,task_list,task)
   =check_box_tag 'rwarwa'
   =#show_comments_count(task)
-  = link_to task.name, project_task_list_task_path(project,task_list,task)
+  = link_to task.name, project_task_list_task_path(project,task_list,task), :class => "#{"#{ 'you_are_assigned' if task.assigned?(current_user) }"}"
 .clear
