--- a/app/views/tasks/show.haml
+++ b/app/views/tasks/show.haml
@@ -1,14 +1,17 @@
 = task_list_column(@current_project, @task_lists, @task)
 
-.task_header  
-  = task_action_links(@current_project, @task_lists, @task)
-  %h2= t('.title', :name => @task.name)
-
+.task_header{ :id => "#{task_id(:header,:edit,@current_project,@task_list)}" }
+  = task_action_links(@current_project, @task_list, @task)
+  %h2= @task.name
+  .assignment
+    - if @task.assigned?(current_user)
+      = "Assigned to #{link_to @task.assigned.user.name, user_path(current_user)}"
+  
 =edit_task_form(@current_project, @task_list, @task)
-
-= people_watching @task
   
 = new_comment_form(@current_project, :target => @task)
 
 #comments
   = list_comments(@comments, @task)
+  
+= people_watching @task
