--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -2,16 +2,33 @@ div.active_task_list
   :background rgb(255,255,0)
 div.active_task
   :background rgb(255,255,0)
-    
 div.task_list_wrap
   :margin-top 10px
   div.task_list
     a
       :font-size 12px
 div.task
+  :padding 1px
+  :-moz-border-radius 5px
+  :-webkit-border-radius 5px
+  input
+    :margin
+      :left 0px
+      :right 0px
   a
     :font-size 12px
+  a.you_are_assigned
+    :-moz-border-radius 5px
+    :-webkit-border-radius 5px
+    :background rgb(190,190,190)
+    :font-size 11px
+    :padding 2px 3px
+      :left 5px
+    :margin-right 3px
 
+div.active_task
+  a.you_are_assigned
+    :background rgb(200,200,0)
 div.task_list, div.task
   p.actions
     :position relative
@@ -47,6 +64,7 @@ form.task_form_wrap
   :-webkit-border-radius 4px  
   div.task_form
     :padding 10px
+    :margin-bottom 10px
     .text_field
       :padding-right 10px
       input
@@ -56,18 +74,35 @@ form.task_form_wrap
           :left solid 1px rgb(150,150,150)
           :bottom solid 1px rgb(150,150,150)
           :right solid 1px rgb(90,90,90)
-
+    .select
+      label
+        :padding-top 3px
+      input
+        :padding 0px
+        :margin 0px
+    .submit
+      :width 100%
+      :text-align right
+      input
+        :float none
 #task_lists
   :clear both
   
 .task_header, .task_list_header
   :display block
-  :margin-bottom 20px
+  :padding 5px 0px
   h2
     :font-size 16px
-    :margin
-      :left 20px
+    :margin 0px
       :bottom 3px
+  .assignment
+    :font-size 12px
+    :color rgb(160,160,160)
+    a
+      :color rgb(160,160,160)
+      :text-decoration underline
+    a:hover
+      :color rgb(0,0,200)
   .text_actions
     :float right
     :font-size 12px
